--- a/0226.html
+++ b/0226.html
@@ -12,7 +12,7 @@
 		4.文件下载链接  <a href=""></a>
 	-->
 	<a href="mailto:15584932588@163.com">这是一个电子邮件链接</a>
-	<a href="down/笔记.zip">文件下载链接</a>
+	<a href="http://img1.sycdn.imooc.com\/climg/58ca5b6700018dfc02400135.jpg">文件下载链接</a>
 	<a href="" title="This is a tooltip">我是一个超链接</a>
 	慕课网 immoc
 	<a href="http://www.imooc.com" target="_blank" title="慕课网只学有用的">慕课网</a>
