--- a/0229Form.html
+++ b/0229Form.html
@@ -7,32 +7,92 @@
 <body>
 	<!-- 
 		1.<input type="text"> 属性：name Maxlength size(文本框的宽度) value默认值 placeholder 提示内容
+		2.按钮有三种类型：type="button+submit+reset"
+		3.图像域和隐藏域，图像提交按钮
+		图像域的使用方法
+		<input type="image" name="img" src="图像的地址">
+		4.下拉菜单+列表标签
+		select标签含有三个属性：name multiple size
+		                     multiple可以多向选择
+		                     size设置可见项目的数量
+		option checked默认选中项 value值提交给服务器
+		<optgroup label>给列表项进行分组，label是分组的标签值
+		<textarea> 文本域设置row+col(长+宽)
 	-->
 	<h1 align="center">注册信息</h1>
 	<hr color="orange"/>
 	<form action="">
-		<table width="600px" align="center" bgcolor="#f2f2f2">
+		<table width="600px" align="center" bgcolor="#f2f2f2" border="1" cellspacing="0">
 			<tr>
-				<td>用户：</td>
-				<td><input type="text" name="user" maxlength="6" size="25" placeholder="请输入用户名"></td>
+				<td align="right" width="50%">用户：</td>
+				<td width="50%"><input type="text" name="user" maxlength="6" size="25" placeholder="请输入用户名"></td>
 			</tr>
 			<tr>
-				<td>邮箱：</td>
+				<td align="right">邮箱：</td>
 				<td><input type="text" name="mail" value="@163.com" size="25" placeholder="请输入邮箱"></td>
 			</tr>
 			<tr>
-				<td>密码：</td>
+				<td align="right">密码：</td>
 				<td><input type="password" name="pwd" maxlength="6" size="25" placeholder="请输入密码"></td>
 			</tr>
 			<tr>
-				<td>确认密码：</td>
+				<td align="right">确认密码：</td>
 				<td><input type="password" name="confirm" maxlength="6" size="25"placeholder="请确认密码"></td>
 			</tr>
 			<tr>
-				<td>上传照片：</td>
+				<td align="right">上传照片：</td>
 				<td><input type="file" name="down"></td>
+			</tr>
+			<tr>
+				<td align="right">性别：</td>
+				<td>
+					男<input type="radio" value="man" name="sex">
+					女<input type="radio" value="women" name="sex">
+					保密<input type="radio" value="must" name="sex" checked="true">
+				</td>
+			</tr>
+			<tr>
+				<td align="right">爱好：</td>
+				<td>
+					苹果<input type="checkbox" name="fruits" value="apple">
+					梨子<input type="checkbox" name="fruits" value="pear">
+					桃子<input type="checkbox" name="fruits" value="peach">
+				</td>
+			</tr>
+			<tr>
+				<td align="right">城市：</td>
+				<td>
+					<select name="city" id="selec_city">
+						<option value="">--请选择--</option>
+						<optgroup label="华东"></optgroup>
+						<option value="1">广东</option>
+						<option value="2">深圳</option>
+						<option value="3">上海</option>
+						<optgroup label="华南"></optgroup>
+						<option value="4">浙江</option>
+						<option value="5">温州</option>
+						<option value="6">苏州</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td align="right">简介：</td>
+				<td>
+					<textarea name="" id="" cols="50" rows="6" placeholder="介绍自己一下吧"></textarea>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2" align="center">
+					<input type="button" name="btn" value="点我">
+					<input type="submit" name="submit" value="提交">
+					<input type="reset" name="reset" value="重置">
+				</td>
 			</tr>
 		</table>
 	</form>	
+
+
+
+
 </body>
 </html>
