--- a/0225.html
+++ b/0225.html
@@ -12,6 +12,7 @@
 <!-- 列表标签
 	无序列表：type属性 square方形  circle空心圆
 	有序列表：type属性 1 a A i I
+	特殊符号：&copy
 -->
 <pre>
 	  Hello,world......
@@ -36,6 +37,7 @@
 <p align="center">Copyright&copy;2018 immoc All Rights Reserved</p>
 <p>公式:x<sup>2</sup>+x=0 &nbsp;解:x<sub>1</sub>=0：x<sub>2</sub>=-1</p>
 <hr/>
+<!-- 一般前面的小圆点用图片来代替 -->
 <ul type="disc">
 	<li>1</li>
 	<li>2</li>
@@ -43,8 +45,14 @@
 	<li>4</li>
 	<li>5</li>
 </ul>
-
 <ul type="square">
+	<li>1</li>
+	<li>2</li>
+	<li>3</li>
+	<li>4</li>
+	<li>5</li>
+</ul>
+<ul type="circle">
 	<li>1</li>
 	<li>2</li>
 	<li>3</li>
