--- a/0229Form.html
+++ b/0229Form.html
@@ -90,7 +90,11 @@
 			</tr>
 		</table>
 	</form>	
-
+<!-- 表单属性 -->
+<!-- 1.action发送数据到何处进行处理的一个文件
+2.method发送数据的方式:get方式，使用URL传递参数，而且对发送的数量有限制，一般被用来获取数据
+                    post方式，表单数据作为HTTP请求体的一部分，发送信息没有数量限制，一般用来修改服务器上的资源
+3.enctype发送表单数据之前进行编码，了解即可 -->
 
 
 
